[package]
name = "ason-util"
version = "0.1.0"
edition = "2021"

license = "MPL-2.0"
description = "ASON Util is a suite of tools designed to convert data from formats such as JSON, TOML, and YAML into ASON format. It also includes an ASON text formatter."
homepage = "https://hemashushu.github.io/works/ason/ason-util"
documentation = "https://hemashushu.github.io/works/ason/ason-util"
repository = "https://github.com/hemashushu/ason-util"
readme = "README.md"
keywords = ["ason", "processor", "json", "serde", "xiaoxuan"]
categories = ["encoding"]

[dependencies]
ason = { git = "https://github.com/hemashushu/ason-rs.git", rev = "9e6c909bf4542291c8dd04c2184829c932262356" }
# clap is more common, but the size is larger
argh = "0.1.12"

[dev-dependencies]
pretty_assertions = "1.4.0"

[features]
